frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haleyfrontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: haleyfrontend
  template:
    metadata:
      labels:
        app: haleyfrontend
    spec:
      containers:
      - name: frontend
        image: zorranschool/haleyplannerfrontend:test
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: haleyfrontend-service
spec:
  selector:
    app: haleyfrontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001  # Add this line to specify the NodePort
  type: NodePort
